Simplify a call